appId: com.plainleaf.tinywins
---
- launchApp
- assertVisible:
    id: "home-screen"
- tapOn:
    id: "add-activity-button"
- assertVisible:
    id: "activity-editor-screen"
- back
- assertVisible:
    id: "home-screen"
